Adding changes for testing and changing for Game class.